--- a/backends/requirements.txt
+++ b/backends/requirements.txt
@@ -10,6 +10,7 @@ django-allauth==0.59.0
 django-widget-tweaks==1.5.0
 idna==3.6
 oauthlib==3.2.2
+Pillow==10.1.0
 pycparser==2.21
 PyJWT==2.8.0
 PyMySQL==1.1.0
