--- a/backends/requirements.txt
+++ b/backends/requirements.txt
@@ -7,17 +7,26 @@ cryptography==41.0.7
 defusedxml==0.7.1
 Django==4.2.8
 django-allauth==0.59.0
+django-braces==1.15.0
 django-widget-tweaks==1.5.0
 idna==3.6
+joblib==1.3.2
+numpy==1.24.4
 oauthlib==3.2.2
 Pillow==10.1.0
 pycparser==2.21
 PyJWT==2.8.0
 PyMySQL==1.1.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
+pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
+scikit-learn==1.3.2
+scipy==1.10.1
+six==1.16.0
 sqlparse==0.4.4
+threadpoolctl==3.2.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.1.0
