--- a/backends/docker-compose.yml
+++ b/backends/docker-compose.yml
@@ -1,28 +1,41 @@
 version: '3.8'
-
 services:
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/usr/src/app/_frontend
+      - media_volume:/usr/src/app/upload
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - web
+
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    container_name: web_django
-    ports:
-      - 8000:8000
+    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
+      - static_volume:/usr/src/app/_frontend
+      - media_volume:/usr/src/app/upload
       - ./:/usr/src/app/
-    environment:
-      DJANGO_SETTINGS_MODULE: backends.settings
+    expose:
+      - "8000"
+    env_file:
+      - ./.env.dev
     depends_on:
       - db
 
   db:
     image: mysql:latest
-    container_name: mysqldb_test
+    container_name: mysql_second_db
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: "1234"
-      MYSQL_DATABASE: test_db
+      MYSQL_DATABASE: Sixfortypy_db
       MYSQL_USER: admin
       MYSQL_PASSWORD: "1234"
+    env_file:
+      - ./.env.prod
     ports:
       - "3307:3306"
     volumes:
