--- a/backends/requirements.txt
+++ b/backends/requirements.txt
@@ -9,10 +9,12 @@ Django==4.2.8
 django-allauth==0.59.0
 django-braces==1.15.0
 django-widget-tweaks==1.5.0
+gunicorn==21.2.0
 idna==3.6
 joblib==1.3.2
 numpy==1.24.4
 oauthlib==3.2.2
+packaging==23.2
 Pillow==10.1.0
 pycparser==2.21
 PyJWT==2.8.0
